# angular_velocity_logger

./: CMakeLists.txt  package.xml
src/: angular_velocity_logger_node.cpp
